Fixed tree icons and callout spacing

--- a/base/app.scss
+++ b/base/app.scss
@@ -28,7 +28,8 @@ body {
   /* Callouts */
   --callout-border-width: 1px;
   --callout-border-opacity: 0.25;
-  --callout-padding: var(--size-4-3) var(--size-4-3) var(--size-4-3) var(--size-4-6);
+  --callout-padding: var(--size-4-3) var(--size-4-3) var(--size-4-3)
+    var(--size-4-6);
   --callout-radius: var(--radius-s);
   --callout-blend-mode: var(--highlight-mix-blend-mode);
   --callout-title-padding: 0;
@@ -96,7 +97,8 @@ body {
   --embed-font-style: inherit;
 
   /* Blocks */
-  --embed-block-shadow-hover: 0 0 0 1px var(--background-modifier-border), inset 0 0 0 1px var(--background-modifier-border);
+  --embed-block-shadow-hover: 0 0 0 1px var(--background-modifier-border),
+    inset 0 0 0 1px var(--background-modifier-border);
 
   /* File layout */
   --file-line-width: 100ch;
@@ -154,10 +156,10 @@ body {
   --h4-font: inherit;
   --h5-font: inherit;
   --h6-font: inherit;
-  --h1-line-height: 1.2;
-  --h2-line-height: 1.2;
-  --h3-line-height: 1.3;
-  --h4-line-height: 1.4;
+  --h1-line-height: 1.5;
+  --h2-line-height: 1.375;
+  --h3-line-height: 1.25;
+  --h4-line-height: 1.125;
   --h5-line-height: var(--line-height-normal);
   --h6-line-height: var(--line-height-normal);
   --h1-size: 2em;
@@ -325,7 +327,10 @@ body {
   --prompt-max-width: 80vw;
   --prompt-max-height: 70vh;
   --prompt-border-width: var(--border-width);
-  --prompt-border-color: var(var(--gray-06), var(--background-modifier-border-focus));
+  --prompt-border-color: var(
+    var(--gray-06),
+    var(--background-modifier-border-focus)
+  );
 
   /* Radiuses */
   --radius-s: 2px;
